--- a/templates/version0.html
+++ b/templates/version0.html
@@ -167,7 +167,8 @@
 							        <h4>Plotting code</h4>
 							        Basically you need to have python installed.
 							        <p>It also requires <a target="_blank" href="http://www.numpy.org/"><i>numpy</i></a> and <a target="_blank" href="http://matplotlib.org/"><i>matplotlib</i></a></p>
-							        <p>The source code for plotting available here </p>
+							        <p>The source code for plotting available here <a href="https://github.com/anandtakawale/potentialFlow">Potential flow on github</a>.</p>
+							       	<h4>Website code</h4>
 
 						        </div>
 
