--- a/templates/result.html
+++ b/templates/result.html
@@ -1,7 +1,7 @@
 		<!DOCTYPE html>
 		<html>
 		<head>
-		<title>Potential flow</title>
+		<title>Online Potential flow</title>
 		</head>
 		<link rel="stylesheet" type="text/css" href="../static/styles/bootstrap.min.css">
 		<body>
@@ -14,7 +14,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">Potential Flow</a>
+				<a class="navbar-brand" href="/">Online Potential Flow</a>
 			</div>
 		
 			<!-- Collect the nav links, forms, and other content for toggling -->
